[package]
name = "bevy_serenity"
version = "0.3.0"
edition = "2021"

[features]
default = ["tls-rust"]
tls-native = ["serenity/native_tls_backend"]
tls-rust = ["serenity/rustls_backend"]

[dependencies]
bevy_app = "0.14"
bevy_ecs = "0.14"
bevy_utils = "0.14"
thiserror = "1.0"
async-compat = "0.2"

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["client", "gateway", "model"]
